adapting the initial code, to be used by the graphic library

--- a/prueba.html
+++ b/prueba.html
@@ -36,6 +36,8 @@
 var treeData = [
   {
     "name": "Top Level",
+    "other": 12,
+    "dsds": "ffdfdd",
     "children": [
       {
         "name": "4|5|6",
@@ -61,7 +63,7 @@ var treeData = [
             "name": "4|5|6",
           },
           {
-            "name": "Daughter2 of A",
+            "name": [8,7],
           }
         ]
       }
